--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dependencies": {
         "JSONStream": "0.10.0",
         "event-stream": "3.2.2",
-        "config": "1.12.0"
+        "config": "1.12.0",
+        "string": "3.0.0 ",
+        "find-remove" : "0.2.5",
+        "glob": "5.0.3"
     },
     "devDependencies": {
         "mocha": "2.1.0",
