--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "find-remove" : "0.2.5",
         "glob": "5.0.3",
         "libxmljs" : "0.13.0",
-        "async" : "0.9.0"
+        "async" : "0.9.0",
+        "string_score" : "0.1.22"
     },
     "devDependencies": {
         "mocha": "2.1.0",
