--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "glob": "5.0.3",
         "libxmljs" : "0.14.0",
         "async" : "0.9.0",
-        "string_score" : "0.1.22"
+        "string_score" : "0.1.22",
+        "line-by-line" : "0.1.3"
     },
     "devDependencies": {
         "mocha": "2.1.0",
